[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://material.tres" type="Material" id=2]
[ext_resource path="res://enemies/images/dog.png" type="Texture" id=3]
[ext_resource path="res://battle/under.png" type="Texture" id=4]
[ext_resource path="res://battle/progress.png" type="Texture" id=5]
[ext_resource path="res://dynamic_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://battle/block.png" type="Texture" id=7]
[ext_resource path="res://enemies/images/attack_icon.png" type="Texture" id=8]
[ext_resource path="res://modifiers/ModifiersContainer.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]

resource_local_to_scene = true
custom_solver_bias = 0.0
extents = Vector2( 87, 64 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="Animation" id=2]

resource_name = "attack"
length = 0.2
loop = false
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -30, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "action"
} ]
}

[sub_resource type="Animation" id=3]

resource_name = "idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[node name="Node2D" type="Node2D" index="0" groups=[
"enemy",
]]

script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="sprite" type="Sprite" parent="." index="0"]

material = ExtResource( 2 )
position = Vector2( -3.8147e-006, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Material", "Transform", "Z Index" ]

[node name="Area2D" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureProgress" type="TextureProgress" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -40.0
margin_top = 60.0
margin_right = 40.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 4 )
texture_over = null
texture_progress = ExtResource( 5 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -40.0
margin_top = 59.0
margin_right = 40.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "10 of 10"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )
blend_times = [  ]

[node name="block_sprite" type="Sprite" parent="." index="5"]

position = Vector2( 55, 65 )
scale = Vector2( 0.6666, 0.6666 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Block" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_top = 59.0
margin_right = 67.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "99"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="intent_icon" type="Sprite" parent="." index="7"]

position = Vector2( -8, -72 )
scale = Vector2( 0.6666, 0.6666 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Intent" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -3.0
margin_top = -78.0
margin_right = 16.0
margin_bottom = -64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "99"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ModifiersContainer" parent="." index="9" instance=ExtResource( 9 )]

position = Vector2( -40, 79 )

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


